# projeto-base

./: mkdocs.yml  pyproject.toml
docs/: index.md
projeto_base/: escalas.py
